--- a/userProfile/static/css/store_page.css
+++ b/userProfile/static/css/store_page.css
@@ -18,7 +18,9 @@ div a.siteURL{
 	padding: 6px 10px;
 	box-shadow : 1px 1px 1px rgba(136, 126, 129, 0.75);
   	filter: progid:DXImageTransform.Microsoft.dropshadow(OffX=1, OffY=1, Color='#887E81');
-  	margin-top: -1px;
+}
+button.rateStoreNow:active{
+	box-shadow: 1px 1px 1px rgba(136, 126, 129, 0.75) inset;
 }
 .categories img{
 	box-shadow: none;
